--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
- # assets:
-   # - images/a_dot_burr.jpeg
+  assets:
+    - assets\image\1103tr1301_5c.jpeg
     #- images/a_dot_ham.jpeg
 
   fonts:
