--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  mobx: ^2.3.3+2
+  mobx: ^2.0.6
+  flutter_mobx: ^2.0.6+4
+  dio: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.3.3
+  mobx_codegen: ^2.0.5
 
 flutter:
   uses-material-design: true
