--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_mobx: ^2.0.6+4
   dio: ^5.0.0
   intl: ^0.19.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,9 @@ flutter:
 
   assets:
     - assets\image\1103tr1301_5c.jpeg
+    - assets\image\Marca.png
+    -  assets\image\ProductCategory.png
+    - assets\image\tag.png
     #- images/a_dot_ham.jpeg
 
   fonts:
