--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dio: ^5.0.0
   intl: ^0.19.0
   http: ^1.2.2
+  cached_network_image: ^3.4.0
 
 dev_dependencies:
   flutter_test:
